ruby html generator

--- a/web/render/templates/footer.html
+++ b/web/render/templates/footer.html
@@ -1,6 +1,6 @@
           <div class="mastfoot">
             <div class="inner">
-              <p>Want to make something cool? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
+              <p>Have a cool idea? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
             </div>
           </div>
 
