- info.json -> Added created, author, description, and is_live fields. - app_builder.rb -> Generates index page and index.html - app_builder.rb -> Only builds apps with is_live fields. - index.html -> Shows author, version, description, and title of available apps.

--- a/web/render/templates/footer.html
+++ b/web/render/templates/footer.html
@@ -1,6 +1,7 @@
           <div class="mastfoot">
+            <br></br>
             <div class="inner">
-              <p>Have a cool idea? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
+              <p align="center" class="lead">Have a cool idea? <a href="https://www.gooddata.com">Build a Ruby app</a>.</p>
             </div>
           </div>
 
