--- a/web/render/css/cover.css
+++ b/web/render/css/cover.css
@@ -1,161 +1,142 @@
-/*
- * Globals
- */
 
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
-
-/*
- * Base structure
- */
-
-html,
 body {
-  height: 100%;
-  background-color: #333;
-}
-body {
-  color: #fff;
+    padding-top: 20px;
+    padding-bottom: 40px;
+  background: url(http://sdk.gooddata.com/gooddata-ruby/images/background.png) fixed left top no-repeat;
+  background-size: 111px 245px;
+  
+  }
+div.divider {
+  background-color: #000000; 
+  padding: 5px 0px; 
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+div.divider h2 {
+  margin: auto; 
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: normal;
+  font-family: "AvenirBlack", Arial, sans-serif;
+  font-size: 1.75em;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
+a.callout { border: 2px solid #00e2eb; z-index: 9; position: relative; background-color: #5bd8eb; /* Old browsers */ background: url('../images/bg-callout-button.png') no-repeat right center, -moz-linear-gradient(top, #5bd8eb 0%, #0ac6e1 100%); /* FF3.6+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5bd8eb), color-stop(100%,#0ac6e1)); /* Chrome,Safari4+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -webkit-linear-gradient(top, #5bd8eb 0%,#0ac6e1 100%); /* Chrome10+,Safari5.1+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -o-linear-gradient(top, #5bd8eb 0%,#0ac6e1 100%); /* Opera 11.10+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -ms-linear-gradient(top, #5bd8eb 0%,#0ac6e1 100%); /* IE10+ */ background: url('../images/bg-callout-button.png') no-repeat right center, linear-gradient(to bottom, #5bd8eb 0%,#0ac6e1 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5bd8eb', endColorstr='#0ac6e1',GradientType=0 ); /* IE6-9 */ -webkit-box-shadow: -2px 2px 1px 0px rgba(150, 150, 150, 0.7); box-shadow: -2px 2px 1px 0px rgba(150, 150, 150, 0.7); color: #fff; font-size: 18px; text-align: center; display: inline-block; margin: 15px 0 0 0; padding: 0.6em 53px 0.6em 30px; text-decoration: none; }
 
+a.callout:hover { border: 2px solid #38C5DF; background: #38c5df; /* Old browsers */ background: url('../images/bg-callout-button.png') no-repeat right center, -moz-linear-gradient(top, #38c5df 0%, #00a6d6 100%); /* FF3.6+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#38c5df), color-stop(100%,#00a6d6)); /* Chrome,Safari4+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -webkit-linear-gradient(top, #38c5df 0%,#00a6d6 100%); /* Chrome10+,Safari5.1+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -o-linear-gradient(top, #38c5df 0%,#00a6d6 100%); /* Opera 11.10+ */ background: url('../images/bg-callout-button.png') no-repeat right center, -ms-linear-gradient(top, #38c5df 0%,#00a6d6 100%); /* IE10+ */ background: url('../images/bg-callout-button.png') no-repeat right center, linear-gradient(to bottom, #38c5df 0%,#00a6d6 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#38c5df', endColorstr='#00a6d6',GradientType=0 ); /* IE6-9 */ }
 
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
+a#left-floater {
+  position: fixed;
+  left: -100px;
+  top: 300px;
+  width: 125px;
+  padding: 7px;
+  background: #f6f6f6 url(../images/logo-image.png) right 7px center no-repeat;
+  background-size: 40px 40px;
+  color: #000000; 
   font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
+  text-align: left;
+  border-right: 4px solid #00d9e1;
 }
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: rgba(255,255,255,.25);
+
+a#left-floater:hover {
+  position: fixed;
+  left: 0;
+  top: 300px;
+  width: 125px;
+  text-decoration: none;
 }
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
+
+a#read-next {
+margin-top: 35px;
+border: 1px solid #5bd8eb;
+font-weight: bold;
+font-size: 22px;
+height: inherit;
+background: #f6f6f6;
+padding: 10px 30px 10px 30px;
+display: block;
+color: black;
+}
+
+a#read-next:hover {
+text-decoration: none;
+}
+
+.left { float: left; }
+.right { float: right; }
+.align-right { text-align: right; }
+.align-left { text-align: left; }
+.align-center { text-align: center; }
+
+/* Section navigation */ 
+
+.section-nav {
+  text-align: center;
+  padding-top: 40px;
+  position: relative;
+  margin: 40px -20px 10px;
+}
+
+.section-nav > div {
+  width: 49.5%;
+}
+
+.section-nav a, .section-nav span {
   color: #fff;
-  border-bottom-color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 8px 12px 10px;
+  border-radius: 5px;
+  /*border: 1px solid #333;*/
+  box-shadow: 0 1px 3px rgba(0,0,0,.3), inset 0 1px 1px rgba(255,255,255,.5);
+  background: #32c9d1;
 }
 
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
+.section-nav a:hover {
+  color: #fff;
+  background: #cacaca;
+  text-decoration: none;
 }
 
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+.section-nav .next, .section-nav .prev {
+  position: relative;
 }
 
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+.section-nav .next:after, .section-nav .prev:before {
+  font-size: 36px;
+  color: #222;
+  font-weight: 800;
+  text-shadow: 0 1px 0 rgba(255,255,255,.4);
+  position: absolute;
+  top: -7px;
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+.section-nav .next:after {
+  content: "›";
+  right: 10px;
+  margin-top: 11px;
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
+.section-nav .prev:before {
+  content: "‹";
+  left: 10px;
+  margin-top: 11px;
+}
+
+.section-nav .prev, .section-nav .prev:hover {
+  /*float: left;*/
+  padding-left: 30px;
+}
+
+.section-nav .next, .section-nav .next:hover {
+  /*float: right;*/
+  padding-right: 30px;
+}
+
+.section-nav .disabled {
+  opacity: .5;
+  /*filter: alpha*/
+  cursor: default;
 }
