--- a/web/render/templates/index.erb
+++ b/web/render/templates/index.erb
@@ -1,18 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
   <head>
-    <title>App store</title>
+    <title>App Store</title>
   </head>
   <body>
-    <div align="center" class="container">
-      <h1 class="cover-heading">
-        App store
-      </h1>
-      <ul>
-        <% for app in apps %>
-          <li><a href="<%= "#{app["name"]}.html" %>"><%= app["name"].titleize %></a></li>
-        <% end %>
-      </ul>
-    </div>
+
+      <div align="center" class="container">
+        <h1 class="cover-heading">
+         App store
+        </h1>
+        <ul>
+          <% for app in apps %>
+            <li><a href="<%= "#{app["name"]}.html" %>"><%= app["name"] %></a></li>
+          <% end %>
+        </ul>
+      </div>
   </body>
 </html>
