--- a/web/render/templates/page.erb
+++ b/web/render/templates/page.erb
@@ -1,9 +1,66 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title><%= app_title %></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Good Data - Ruby Executor</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="../css/cover.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
   </head>
+
   <body>
+ <div >
+
+      <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div style="margin-left: 100px;">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+     <a class="brand" href="http://sdk.gooddata.com/gooddata-ruby">
+      <img src="http://sdk.gooddata.com/gooddata-ruby/images/header-logo.png" alt="GoodData Labs" width="24" height="24">
+      GoodData<span style="color: #dc2020;"> Ruby </span>
+</a>
+      <div class="nav-collapse collapse container"  >
+        <ul class="nav">
+          <li class="active">
+            <a href="http://sdk.gooddata.com/gooddata-ruby">Home</a>
+          </li>
+          <li class="">
+            <a href="http://sdk.gooddata.com/gooddata-ruby/getting-started">Get Started</a>
+          </li>
+    <li class="">
+            <a href="http://sdk.gooddata.com/gooddata-ruby/tutorials">Tutorials</a>
+          </li>
+          <li class="">
+            <a href="https://developer.gooddata.com/forum" target="_blank">Forum</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
     <div align="center" class="container">
       <p align="center" class="small">
         <kbd>Version <%= app_version %></kbd>
