--- a/web/render/templates/index.erb
+++ b/web/render/templates/index.erb
@@ -22,7 +22,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  
   </head>
 
   <body>
@@ -68,7 +67,7 @@
         <div class="cover-container">
 <br></br>
 <div class="inner cover">
-<div class="hero-unit">
+<div class="hero-unit" style="background-image: url(../img/banner.png);">
 <h1>App Store</h1><p>Packable apps that extend the functionality of your Good Data project. <a href="#"> Submit your own.</a></p>
 </div>
 <div align="center" class="container">
@@ -79,9 +78,10 @@
           <ul class="thumbnails">
 
             <% for app in apps %>
-              <li class="span4">
+              <li class="span3">
                 <a href="<%= "#{app["name"]}.html" %>" class="thumbnail">
-                    <%= app["name"] %>
+                    <img src="<%= "../img/#{app["name"]}.png" %>"></img>
+                    <span> <%= app["title"] %> </span>
                 </a>
               </li>
             <% end %>
@@ -90,6 +90,12 @@
         </div>
       </div>
     </div>
-
+<div class="footer" style="text-align: center; font-size: 80%;">
+<p>© GoodData 2014</p>
+<p>The use, installation, and production of Apps for the GoodData app store is unsupported. Please see the <a href="http://www.gooddata.com/terms-of-use/" target="_blank">terms of use</a> for more information.</p>
+      </div>
   </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/docs.min.js"></script>
 </html>
