--- a/web/render/templates/page.erb
+++ b/web/render/templates/page.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +22,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
 
   <body>
@@ -39,7 +37,7 @@
       </button>
      <a class="brand" href="http://sdk.gooddata.com/gooddata-ruby">
       <img src="http://sdk.gooddata.com/gooddata-ruby/images/header-logo.png" alt="GoodData Labs" width="24" height="24">
-      GoodData<span style="color: #dc2020;"> Ruby </span>
+      GoodData<span style="color: #dc2020;">Ruby
 </a>
       <div class="nav-collapse collapse container"  >
         <ul class="nav">
@@ -60,11 +58,34 @@
     </div>
   </div>
 </div>
+    <div class="site-wrapper">
 
-    <div align="center" class="container">
-      <p align="center" class="small">
-        <kbd>Version <%= app_version %></kbd>
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+<br></br>
+<div class="inner cover">
+<div align="left" class="container">
+
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
       </p>
+      <div class="alert alert-success" id="installing">
+        <p>Installing <%= app_title %>...</p>
+      </div>
+        <div style="float:right;" class="well">
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" src="<%= "../img/#{app_name}.png" %>"></img>
+            </a>
+            <div class="media-body">
+              <br>
+              <div class="media-heading"><a class="btn btn-info" id="install"><i class="icon-download icon-white"></i> Install App</a></div>
+              <small><kbd><%= app_title %><br>
+                Version <%= app_version %></kbd></small>
+            </div>
+          </div>
+        </div>
       <h1 class="cover-heading">
         <%= app_title %>
       </h1>
@@ -74,43 +95,67 @@
       <h3>
         Description
       </h3>
-      <p align="center">
+      <p align="left">
         <%= app_description %>
       </p>
-      <h3>Parameters</h3>
-      <table>
-        <tr>
-          <td>
+      <h3>Details</h3>
+      <table class="table table-condensed">
+        <tr class="success">
+          <th>
             Name
-          </td>
-          <td>
+          </th>
+          <th>
             Description
-          </td>
-          <td>
+          </th>
+          <th>
             Mandatory
-          </td>
+          </th>
         </tr>
         <% for param in app_parameters %>
           <tr>
-            <td>
+            <td align="center">
               <%= param["name"] %>
             </td>
-            <td>
+            <td align="center">
               <%= param["description"] %>
             </td>
-            <td>
+            <td align="center">
               <%= param["mandatory"] || false %>
             </td>
           </tr>
          <% end %>
       </table>
 
-      <h3>Run instructions</h3>
+      <h3>Console</h3>
       </p>
         <pre>
           cd app_store/apps;
           bin/gooddata -Ulogin -Ppass -p PROJECT_PID run_ruby --dir <%= app_name %> --params <%= app_name %>/params.json --name\"<%= app_title %>\" --remote
         </pre>
     </div>
+  </div>
+</div>
+</div>
+</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+       <script type="text/javascript">
+        $(function(){
+          $("div#installing").hide();
+            $("#install").on("click", function(){
+              $("#install").text('Installing...').attr("disabled", true);
+              $("div#installing").show(500);
+              setTimeout(function() {
+                $('#install').text('Installed');
+                $("div#installing").text('Running application...');
+                setTimeout(function()  {
+                  $("div#installing").text('Success.');
+                  $("div#installing").hide(500);
+                },1000);
+              }, 2500);
+          });
+        });
+        </script>
+    <script src="../js/docs.min.js"></script>
   </body>
 </html>
