css corrections, connection with server, auth

--- a/web/render/templates/index.erb
+++ b/web/render/templates/index.erb
@@ -68,7 +68,7 @@
 <br></br>
 <div class="inner cover">
 <div class="hero-unit" style="background-image: url(../img/banner.png);">
-<h1>App Store</h1><p>Packable apps that extend the functionality of your Good Data project. <a href="#"> Submit your own.</a></p>
+<h1>App Store</h1><p>Packageable apps that extend the functionality of your Good Data project. <a href="#"> Submit your own.</a></p>
 </div>
 <div align="center" class="container">
 
