--- a/web/render/templates/index.erb
+++ b/web/render/templates/index.erb
@@ -68,9 +68,46 @@
 <br></br>
 <div class="inner cover">
 <div class="hero-unit" style="background-image: url(../img/banner.png);">
-<h1>App Store</h1><p>Packageable apps that extend the functionality of your Good Data project. <a href="#"> Submit your own.</a></p>
+<h1>App Store</h1><p>Data made agile through custom community applications. <a href="#myModal" data-toggle="modal"> Submit your own.</a></p>
 </div>
 <div align="center" class="container">
+
+<!-- Modal -->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h4 id="myModalLabel">App Developer Program</h4>
+  </div>
+  <div class="modal-body">
+    <p class="lead"> Who said love can't be bought? </p>
+    <img src="../img/heart.png"></img>
+    <br></br>
+    <p> All invited developers get free GoodData gear (t-shirt, coffee cup, or portable charger).</p>
+    <h5> Join Waiting List </h5>
+    <form class="navbar-form">
+      <input type="text" class="span2" placeholder="Name">
+      <input type="text" class="span2" placeholder="Email">
+      <select>
+        <option>Choose welcome gift...</option>
+        <option>T-Shirt Womens Small</option>
+        <option>T-Shirt Womens Medium</option>
+        <option>T-Shirt Womens Large</option>
+        <option>T-Shirt Mens Small</option>
+        <option>T-Shirt Mens Medium</option>
+        <option>T-Shirt Mens Large</option>
+        <option>Coffee Mug</option>
+        <option>Portable Charger</option>
+      </select>
+    </form>
+    <br></br>
+  </div>
+  <div class="modal-footer">
+    <div align="center">
+      <span style="float:left;"><small><p>© GoodData 2014</p></small></span>
+    </div>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Submit</button>
+  </div>
+</div>
 
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
