--- a/web/render/templates/page.erb
+++ b/web/render/templates/page.erb
@@ -138,6 +138,7 @@
 </div>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../js/jquery.cookie.js"></script>
     <script src="../js/bootstrap.min.js"></script>
        <script type="text/javascript">
         $(function(){
@@ -156,8 +157,9 @@
           });
         });
         </script>
-    <script src="../js/docs.min.js"></script>
+    
 <div class="footer" style="text-align: center; font-size: 80%;">
+<br></br>
 <p>© GoodData 2014</p>
 <p>The use, installation, and production of Apps for the GoodData app store is unsupported. Please see the <a href="http://www.gooddata.com/terms-of-use/" target="_blank">terms of use</a> for more information.</p>
       </div>
